[Sudhanshu] Modify: modified description

--- a/CommonEle.ipynb
+++ b/CommonEle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\n@Author: Sudhanshu Kumar\\n@Date: 11 - 10 - 2024\\n@Last Modified by: Sudhanshu Kumar\\n@Last Modified time: 11 - 10 - 2024\\n@Title: Python program to find the common element between two array\\n\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,19 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import logger\n",
     "\n",
-    "log = logger.logger_init('SizeLen.ipynb')"
+    "log = logger.logger_init('CommonEle.ipynb')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-11 12:03:51,342:INFO:SizeLen.ipynb:Common Elements: [2 3 4 5]\n"
+      "2024-10-11 12:04:56,452:INFO:CommonEle.ipynb:Common Elements: [2 3 4 5]\n"
      ]
     }
    ],
