[sudhanshu] Modify: modified description

--- a/ScoreZero.ipynb
+++ b/ScoreZero.ipynb
@@ -76,7 +76,7 @@
     "    'qualify': ['yes', 'no', 'yes', 'no', 'no', 'yes', 'yes', 'no', 'no', 'yes']}\n",
     "    labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
     "\n",
-    "    print(count(data,labels))"
+    "    log.info(count(data,labels))"
    ]
   },
   {
