--- a/ReadData_FromFile.ipynb
+++ b/ReadData_FromFile.ipynb
@@ -45,6 +45,16 @@
    "outputs": [],
    "source": [
     "def read_data(file):\n",
+    "    \"\"\"\n",
+    "    Description:\n",
+    "        This function read the data from .txt file\n",
+    "    Parameters:\n",
+    "        file: Name and path of the .txt file\n",
+    "    Returns:\n",
+    "        x_values: values for x axis\n",
+    "        y_values: values for y axis\n",
+    "    \"\"\"\n",
+    "\n",
     "    x_values = []\n",
     "    y_values = []\n",
     "\n",
@@ -65,6 +75,16 @@
    "outputs": [],
    "source": [
     "def plot_graph(file):\n",
+    "    \"\"\"\n",
+    "    Description:\n",
+    "        This function will plot the graph\n",
+    "    Parameters:\n",
+    "        file: name and path to the file\n",
+    "    Returns:\n",
+    "        nothing\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
     "    x,y = read_data(file)\n",
     "\n",
     "    plt.plot(x,y)\n",
