[sudhanshu] Modify: modified description

--- a/ReadCsv.ipynb
+++ b/ReadCsv.ipynb
@@ -44,6 +44,15 @@
    "outputs": [],
    "source": [
     "def read_financial_data(filename):\n",
+    "    \"\"\"\n",
+    "    Description:\n",
+    "        This function read the data from .csv file\n",
+    "    Parameters:\n",
+    "        file: Name and path of the .csv file\n",
+    "    Returns:\n",
+    "        x_values: values for x axis\n",
+    "        y_values: values for y axis\n",
+    "    \"\"\"\n",
     "    # Load the data into a DataFrame\n",
     "    df = pd.read_csv(filename)\n",
     "    \n",
