[sudhanshu] Modify: modified description

--- a/DifferentWidth.ipynb
+++ b/DifferentWidth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\n    @Author: Sudhanshu Kumar\\n    @Date: 21-10-2024\\n    @Last Modified by: Sudhanshu Kumar\\n    @Last Modified time: 21-10-2024\\n    @Title : Ploting lines with different width\\n\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
     "    plt.legend()\n",
     "\n",
     "    # Add grid for better readability\n",
-    "    plt.grid()\n",
+    "    plt.grid(True)\n",
     "\n",
     "    # Display the plot\n",
     "    plt.tight_layout()  # Adjust layout to prevent clipping\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
