--- a/BarPlot.ipynb
+++ b/BarPlot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\n    @Author: Sudhanshu Kumar\\n    @Date: 28-10-2024\\n    @Last Modified by: Sudhanshu Kumar\\n    @Last Modified time: 28-10-2024\\n    @Title : Creating bar plot for seaborn problem\\n\\n'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,12 +29,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m \n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt \n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -52,9 +65,9 @@
     "    returns:\n",
     "        nothing\n",
     "    \"\"\"\n",
-    "    data = pd.Series(extractData(file))\n",
+    "    df = pd.Series(extractData(file))\n",
     "    categ = ['Female','Male']\n",
-    "    plt.bar(categ,data)\n",
+    "    sns.barplot(x='categ', y='df', data=df,palette='viridis')\n",
     "    plt.show()"
    ]
   },
